--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Projet Portifólio</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Fira+Code:wght@300;400;500;600;700&family=Press+Start+2P&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Fira+Code:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="CSS/reset.css">
@@ -24,7 +27,11 @@
         </nav>
     </header>
     <main>
-        <img src="assets/img/camiseta-programador-javascript--5dd7b72c2ccbb-estampa-308-removebg-preview.png" alt="">
+        <div>
+            <h1>Renan Ferreira</h1>
+            <h2>FrontEnd Developer</h2>
+        </div>
+        <img src="assets/img/pc.png" alt="">
     </main>
     <footer>
 
