--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/Components/title.css">
+    <link rel="stylesheet" href="CSS/Components/subtitle.css">
+    <link rel="stylesheet" href="CSS/Components/box.css">
+
 </head>
 <body>   
     <header>
@@ -27,7 +31,7 @@
         </nav>
     </header>
     <main>
-        <div>
+        <div id="box">
             <h1>Renan Ferreira</h1>
             <h2>FrontEnd Developer</h2>
         </div>
