--- a/index.html
+++ b/index.html
@@ -14,27 +14,31 @@
 
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/Components/header.css">
     <link rel="stylesheet" href="CSS/Components/title.css">
     <link rel="stylesheet" href="CSS/Components/subtitle.css">
     <link rel="stylesheet" href="CSS/Components/box.css">
-
+    <link rel="stylesheet" href="CSS/Components/button.css">
+    <link rel="stylesheet" href="CSS/Components/action.css">
 </head>
 <body>   
-    <header>
+    <header class="header">
         <img src="assets/img/logo1.png" alt="Logo">
         <nav>
-            <a href="#" lang="en">Skills</a>
-            <a href="#">Projetos</a>
-            <a href="#">Sobre</a>
-            <a href="#">Contatos</a>
-            <a id="button" href="#" lang="en">Dowloads CV</a>
+            <a class="action" href="#" lang="en">Skills</a>
+            <a class="action" href="#">Projetos</a>
+            <a class="action" href="#">Sobre</a>
+            <a class="action" href="#">Contatos</a>
+            <a class="button" href="#" lang="en">Dowloads CV</a>
         </nav>
     </header>
     <main>
-        <div id="box">
-            <h1>Renan Ferreira</h1>
-            <h2>FrontEnd Developer</h2>
+        <div class="box">
+            <h1 class="title">Renan Ferreira</h1>
+            <h2 class="subtitle">FrontEnd Developer</h2>
         </div>
+            <a class="button" href="#" lang="en">Dowloads CV</a>
+            <a class="button" href="#">Contatos</a>
     </main>
     <footer>
 
