--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/Components/header.css">
+    <link rel="stylesheet" href="CSS/Components/banner.css">
     <link rel="stylesheet" href="CSS/Components/title.css">
     <link rel="stylesheet" href="CSS/Components/subtitle.css">
     <link rel="stylesheet" href="CSS/Components/box.css">
     <link rel="stylesheet" href="CSS/Components/button.css">
     <link rel="stylesheet" href="CSS/Components/action.css">
+    
 </head>
 <body>   
     <header class="header">
-        <img src="assets/img/logo1.png" alt="Logo">
+        <img src="assets/img/logo.png" alt="Logo">
         <nav>
             <a class="action" href="#" lang="en">Skills</a>
             <a class="action" href="#">Projetos</a>
@@ -33,12 +35,14 @@
         </nav>
     </header>
     <main>
-        <div class="box">
-            <h1 class="title">Renan Ferreira</h1>
-            <h2 class="subtitle">FrontEnd Developer</h2>
-        </div>
-            <a class="button" href="#" lang="en">Dowloads CV</a>
-            <a class="button" href="#">Contatos</a>
+        <section class="banner">            
+            <div class="box">
+                <h1 class="title">Renan Ferreira</h1>
+                <h2 class="subtitle">FrontEnd Developer</h2>
+            </div>
+                <a class="button" href="#" lang="en">Dowloads CV</a>
+                <a class="button" href="#">Contatos</a>
+        </section>
     </main>
     <footer>
 
