Create the banner component

--- a/index.html
+++ b/index.html
@@ -35,13 +35,17 @@
         </nav>
     </header>
     <main>
-        <section class="banner">            
-            <div class="box">
-                <h1 class="title">Renan Ferreira</h1>
-                <h2 class="subtitle">FrontEnd Developer</h2>
-            </div>
-                <a class="button" href="#" lang="en">Dowloads CV</a>
-                <a class="button" href="#">Contatos</a>
+        <section class="banner">
+            <div class="wrapper">             
+                <div class="box">
+                    <h1 class="title">Renan Ferreira</h1>
+                    <h2 class="subtitle">FrontEnd Developer</h2>
+                </div>
+                <div class="navigation">
+                    <a class="button" href="#" lang="en">Dowloads CV</a>
+                    <a class="button" href="#">Contatos</a>
+                </div>
+            </div>        
         </section>
     </main>
     <footer>
