Create the -second variation to title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projet Portifólio</title>
+    <title>Projeto Portifólio</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Fira+Code:wght@300;400;500;600;700&family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="CSS/Components/box.css">
     <link rel="stylesheet" href="CSS/Components/button.css">
     <link rel="stylesheet" href="CSS/Components/action.css">
+    <link rel="stylesheet" href="CSS/Components/skills.css">
     
 </head>
 <body>   
@@ -34,6 +35,9 @@
             <a class="button" href="#" lang="en">Dowloads CV</a>
         </nav>
     </header>
+
+
+
     <main>
         <section class="banner">
             <div class="wrapper">             
@@ -47,7 +51,18 @@
                 </div>
             </div>        
         </section>
+        <section class="skills">
+            <h2 class="title -second">Skills</h2>
+        </section>
+
+
+
+
+
     </main>
+
+
+
     <footer>
 
     </footer>
