--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="CSS/Components/box.css">
     <link rel="stylesheet" href="CSS/Components/button.css">
     <link rel="stylesheet" href="CSS/Components/action.css">
-    <link rel="stylesheet" href="CSS/Components/skills.css">
+    <link rel="stylesheet" href="CSS/Components/section.css">
     
 </head>
 <body>   
@@ -51,7 +51,7 @@
                 </div>
             </div>        
         </section>
-        <section class="skills">
+        <section class="section">
             <h2 class="title -second">Skills</h2>
         </section>
 
