--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/Components/header.css">
     <link rel="stylesheet" href="CSS/Components/banner.css">
-    <link rel="stylesheet" href="CSS/Components/title.css">
+    <link rel="stylesheet" href="CSS/Components/main-title.css">
     <link rel="stylesheet" href="CSS/Components/subtitle.css">
     <link rel="stylesheet" href="CSS/Components/box.css">
     <link rel="stylesheet" href="CSS/Components/button.css">
     <link rel="stylesheet" href="CSS/Components/action.css">
     <link rel="stylesheet" href="CSS/Components/section.css">
-    
+    <link rel="stylesheet" href="CSS/Components/skill-tec.css">
+    <link rel="stylesheet" href="CSS/Components/progress-bar.css">
 </head>
 <body>   
     <header class="header">
@@ -39,10 +40,11 @@
 
 
     <main>
+
         <section class="banner">
             <div class="wrapper">             
                 <div class="box">
-                    <h1 class="title">Renan Ferreira</h1>
+                    <h1 class="main-title">Renan Ferreira</h1>
                     <h2 class="subtitle">FrontEnd Developer</h2>
                 </div>
                 <div class="navigation">
@@ -51,8 +53,17 @@
                 </div>
             </div>        
         </section>
+
         <section class="section">
-            <h2 class="title -second">Skills</h2>
+            <h2 class="main-title -second">Skills</h2>
+            <article class="skill-tec">
+                <img class="icon" src="img/ico_html5.png" alt="Logo html">
+                <div class="right">
+                    <h3 class="title">HTML</h3>
+                    <progress class="progress-bar" max="100" value="40">40
+                    </progress>
+                <div>   
+            </article>
         </section>
 
 
