Create the card-project component

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <link rel="stylesheet" href="CSS/Components/action.css">
     <link rel="stylesheet" href="CSS/Components/section.css">
     <link rel="stylesheet" href="CSS/Components/skill-tec.css">
+    <link rel="stylesheet" href="CSS/Components/wrapper-skill.css">
     <link rel="stylesheet" href="CSS/Components/progress-bar.css">
+    <link rel="stylesheet" href="CSS/Components/card-project.css">
 </head>
 <body>   
     <header class="header">
@@ -37,10 +39,7 @@
         </nav>
     </header>
 
-
-
     <main>
-
         <section class="banner">
             <div class="wrapper">             
                 <div class="box">
@@ -56,16 +55,63 @@
 
         <section class="section">
             <h2 class="main-title -second">Skills</h2>
-            <article class="skill-tec">
-                <img class="icon" src="img/ico_html5.png" alt="Logo html">
-                <div class="right">
-                    <h3 class="title">HTML</h3>
-                    <progress class="progress-bar" max="100" value="40">40
-                    </progress>
-                <div>   
-            </article>
+                <div class="wrapper-skill"> 
+                    <article class="skill-tec">
+                        <img class="icon" src="img/ico_html5.png" alt="Logo html">
+                        <div class="right">
+                            <h3 class="title">HTML</h3>
+                            <progress class="progress-bar" max="100" value="40">40
+                            </progress>
+                        </div>   
+                    </article>
+                    <article class="skill-tec">
+                        <img class="icon" src="img/ico_react.png" alt="Logo React">
+                        <div class="right">
+                            <h3 class="title">React</h3>
+                            <progress class="progress-bar" max="100" value="0">0
+                            </progress>
+                        </div>   
+                    </article>
+                    <article class="skill-tec">
+                        <img class="icon" src="img/ico_css3.png" alt="Logo css">
+                        <div class="right">
+                            <h3 class="title">CSS</h3>
+                            <progress class="progress-bar" max="100" value="40">40
+                            </progress>
+                        </div>   
+                    </article>
+                    <article class="skill-tec">
+                        <img class="icon" src="img/ico_nodejs.png" alt="Logo NodeJS">
+                        <div class="right">
+                            <h3 class="title">NodeJS</h3>
+                            <progress class="progress-bar" max="100" value="0">0
+                            </progress>
+                        </div>   
+                    </article>
+                    <article class="skill-tec">
+                        <img class="icon" src="img/ico_js.png" alt="Logo JavaScript">
+                        <div class="right">
+                            <h3 class="title">JavaScript</h3>
+                            <progress class="progress-bar" max="100" value="10">10
+                            </progress>
+                        </div>   
+                    </article>
+                </div>
         </section>
 
+        <section class="section">
+            <h2 class="main-title -second">Projetos</h2>
+            <figure class="card-project">
+                <img src="img/loading.png" alt="Projeto Loaading">
+            </figure>
+            <figure class="card-project">
+                <img src="img/loading.png" alt="Projeto Loaading">
+            </figure>
+            <figure class="card-project">
+                <img src="img/logo.png" alt="Logo Renan">
+            </figure>
+            
+        </section>
 
 
 
