--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </div>
         </section>
 
-        <section class="section">
+        <section class="section -bgBlack -bdFirst">
             <h2 class="main-title -second">Projetos</h2>
             <figure class="card-project">
                 <img src="img/loading.png" alt="Projeto Loaading">
