Create the wrapper-card component

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <link rel="stylesheet" href="CSS/Components/wrapper-skill.css">
     <link rel="stylesheet" href="CSS/Components/progress-bar.css">
     <link rel="stylesheet" href="CSS/Components/card-project.css">
+    <link rel="stylesheet" href="CSS/Components/wrapper-card.css
+     ">
+    
 </head>
 <body>   
     <header class="header">
@@ -101,16 +104,17 @@
 
         <section class="section -bgBlack -bdFirst">
             <h2 class="main-title -second">Projetos</h2>
-            <figure class="card-project">
-                <img src="img/loading.png" alt="Projeto Loaading">
-            </figure>
-            <figure class="card-project">
-                <img src="img/loading.png" alt="Projeto Loaading">
-            </figure>
-            <figure class="card-project">
-                <img src="img/logo.png" alt="Logo Renan">
-            </figure>
-            
+            <div class="wrapper-card">
+                <figure class="card-project">
+                    <img src="img/loading.png" alt="Projeto Loaading">
+                </figure>
+                <figure class="card-project">
+                    <img src="img/loading.png" alt="Projeto Loaading">
+                </figure>
+                <figure class="card-project">
+                    <img src="img/logo.png" alt="Logo Renan">
+                </figure>
+            </div>
         </section>
 
 
